# internal/dto/knowledge.go
@@ -1,0 +1,20 @@
+package dto
+
+import "github.com/google/uuid"
+
+type KnowledgeDomainSuggestion struct {
+	ID   uuid.UUID `json:"id"`
+	Name string    `json:"name"`
+}
+
+type KnowledgeSubdomainSuggestion struct {
+	ID       uuid.UUID `json:"id"`
+	DomainID uuid.UUID `json:"domain_id"`
+	Name     string    `json:"name"`
+}
+
+type KnowledgeFieldSuggestion struct {
+	ID          uuid.UUID `json:"id"`
+	SubdomainID uuid.UUID `json:"subdomain_id"`
+	Name        string    `json:"name"`
+}
